--- a/Win.Rentas/Win.Rentas.csproj
+++ b/Win.Rentas/Win.Rentas.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BL\Rentas\Producto.cs" />
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
